fix height overflow on adv char defs

--- a/public/style.css
+++ b/public/style.css
@@ -2489,10 +2489,12 @@ input[type="range"]::-webkit-slider-thumb {
     background-color: var(--black30a);
     backdrop-filter: blur(calc(var(--SmartThemeBlurStrength)*2));
     -webkit-backdrop-filter: blur(calc(var(--SmartThemeBlurStrength)*2));
-    min-height: calc(100svh - 84px);
+
     min-width: 100px;
     max-width: var(--sheldWidth);
+    height: calc(100svh - 84px);
     min-height: calc(100svh - 84px);
+    max-height: calc(100svh - 84px);
     position: absolute;
     z-index: 3002;
     margin-left: auto;
